crates/ic-lint/tests/snapshots/unreachable_union_cases__boolean_out_of_range.snap
---
source: crates/ic-lint/tests/unreachable_union_cases.rs
expression: test_lint_hir(source)
---
error[UnreachableUnionCases]: case label 2 is outside the range [0, 1] of the discriminator type
   ┌ test.idl:5:21
   │
 5 │     case 2: boolean c;  // Out of range for boolean
   ·                     ^ case label out of range
   └──

error: union case label for variant `MyUnion::c` value 2 does not fit in type boolean
   ┌ test.idl:2:23
   │
 2 │ union MyUnion switch (boolean) {
   ·                       ^^^^^^^ value out of range
   └──
