crates/ic-lint/tests/snapshots/unreachable_union_cases__multiple_cases_after_default.snap
---
source: crates/ic-lint/tests/unreachable_union_cases.rs
expression: test_lint_hir(source)
---
error: case 'c' is unreachable because it appears after default
   ┌ test.idl:5:21
   │
 5 │     case 2: boolean c;  // Unreachable
   ·                     ^ unreachable case
   └──
 help: move this case before the default case

error: case 'd' is unreachable because it appears after default
   ┌ test.idl:6:19
   │
 6 │     case 3: octet d;    // Also unreachable
   ·                   ^ unreachable case
   └──
 help: move this case before the default case
